added source files

--- a/ftpd.settings
+++ b/ftpd.settings
@@ -1,17 +1,21 @@
 # this is an automatically generated file, updated by serverAbstractSwitch and initialized by ftpd.init
-welcome=WELCOME TO THE ANOMIC FTP SERVER
-port=2121
-countsubdir=false
-unixfoldermask=777
-loglevel=2
+clients=*
 unixgroup=admin
-prevYearFormat=MMM dd  yyyy
-createindex=true
-unixuser=admin
-charcoding=UTF-8
 currYearFormat=MMM dd HH:mm
 unixfilemask=666
-dataport=0
-clients=*
+loginfailAddDelay=1000
+charcoding=UTF-8
+port=2121
+createindex=true
 connections=0
+loginfailMaxAttempts=1
+prevYearFormat=MMM dd  yyyy
+dataport=0
+loginfailInitialDelay=0
+unixuser=admin
+countsubdir=false
+unixfoldermask=777
+datahost=
+welcome=WELCOME TO THE ANOMIC FTP SERVER
+loglevel=2
 # EOF
